--- a/package.json
+++ b/package.json
@@ -14,9 +14,18 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "es6-promise": "^4.1.1",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "fastclick": "^1.0.6",
     "lib-flexible": "^0.3.2",
+    "object-assign": "^4.1.1",
+    "optimize-css-assets-webpack-plugin": "^1.3.2",
+    "vonic": "^2.0.0-beta.15",
+    "vswipe": "^1.0.1",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vue-scroller": "^2.2.1",
+    "wechat-jssdk": "^3.0.9"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -25,6 +34,7 @@
     "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
@@ -38,7 +48,7 @@
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
+    "file-loader": "^0.9.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
@@ -75,7 +85,8 @@
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "moment": "^2.17.1"
   },
   "engines": {
     "node": ">= 4.0.0",
