--- a/package.json
+++ b/package.json
@@ -18,19 +18,24 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "fastclick": "^1.0.6",
     "lib-flexible": "^0.3.2",
+    "mint-ui": "^2.2.7",
     "object-assign": "^4.1.1",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
+    "qs": "^6.5.0",
     "vonic": "^2.0.0-beta.15",
     "vswipe": "^1.0.1",
     "vue": "^2.3.3",
+    "vue-ls": "^2.2.18",
     "vue-router": "^2.3.1",
     "vue-scroller": "^2.2.1",
-    "wechat-jssdk": "^3.0.9"
+    "wechat-jssdk": "^3.0.9",
+    "weixin-js-sdk": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-component": "^0.9.1",
     "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
@@ -64,6 +69,7 @@
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
+    "moment": "^2.17.1",
     "nightwatch": "^0.9.12",
     "node-sass": "^4.5.3",
     "opn": "^4.0.2",
@@ -85,8 +91,7 @@
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0",
-    "moment": "^2.17.1"
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 4.0.0",
