--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "ellipsis-plus": "^1.0.1",
     "es6-promise": "^4.1.1",
+    "exif-js": "^2.2.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "fastclick": "^1.0.6",
     "lib-flexible": "^0.3.2",
@@ -25,9 +27,11 @@
     "vonic": "^2.0.0-beta.15",
     "vswipe": "^1.0.1",
     "vue": "^2.3.3",
+    "vue-bubble": "^1.0.2",
     "vue-ls": "^2.2.18",
     "vue-router": "^2.3.1",
     "vue-scroller": "^2.2.1",
+    "vue-ui-swipe": "^1.0.2",
     "wechat-jssdk": "^3.0.9",
     "weixin-js-sdk": "^1.2.0"
   },
@@ -50,6 +54,7 @@
     "cross-env": "^4.0.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
+    "ellipsis-plus": "^1.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
