--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 node_modules/
-dist/
+dest/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -15,3 +15,4 @@ selenium-debug.log
 *.njsproj
 *.sln
 .metadata
+config/
